--- a/css/desctop.css
+++ b/css/desctop.css
@@ -207,7 +207,7 @@
         rgba(46, 47, 66, 0.7)),
     url(../images/office1x.jpg);}
     
-    @media (min-device-pixel-ratio: 2),
+    /* @media (min-device-pixel-ratio: 2),
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
             .hero {
@@ -215,7 +215,19 @@
                         rgba(46, 47, 66, 0.7)),
                     url(../images/office2x.jpg);
             }
-        }
+        } */
+        @media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px),
+  screen and (min-resolution: 192dpi) and (min-width: 1200px),
+  screen and (min-resolution: 2dppx) and (min-width: 1200px) {
+  .hero {
+    background-image: linear-gradient(
+        to right,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/office2x.jpg);
+  }
+}
 
     .hero-title{
         max-height: 120px;
