--- a/css/tablet.css
+++ b/css/tablet.css
@@ -99,7 +99,7 @@
         rgba(46, 47, 66, 0.7)),
     url(../images/dark-tablet.jpg);
     }
-    @media (min-device-pixel-ratio: 2),
+    /* @media (min-device-pixel-ratio: 2),
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
             .hero {
@@ -107,7 +107,19 @@
                         rgba(46, 47, 66, 0.7)),
                     url(../images/dark-tablet-2x.jpg);
             }
-        }
+        } */
+        @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
+  screen and (min-resolution: 192dpi) and (min-width: 768px),
+  screen and (min-resolution: 2dppx) and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(
+        to right,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/dark-tablet-2x.jpg);
+  }
+}
         .hero-title {
             font-family: 'Roboto';
             font-style: normal;
