--- a/css/styles.css
+++ b/css/styles.css
@@ -36,12 +36,12 @@ body{
 .link{
     text-decoration: none;
 }
-.container{
-    /* width: 1158px; */
+/* .container{
+    width: 1158px;
     padding-left:15px;
     padding-right: 15px;
     margin: 0 auto;
-}
+} */
 
 .site-body{
 }
@@ -356,12 +356,12 @@ transition-timing-function: var(--hov-foc-cubic);
 
 /* /* --------About---------  */
 
-.container{
-    /* width: 1158px; */
+/* .container{
+    width: 1158px; 
     padding-left:15px;
     padding-right: 15px;
     margin: 0 auto;
-}
+} */
 .zagolovok{
     display: none;
 }
@@ -1128,12 +1128,19 @@ transition-timing-function: var(--hov-foc-cubic);
 
 /* -----------PORTFOLIO-head------------ */
 
-.container{
-    /* width: 1158px; */
+/* .container{
+    width: 1158px;
     padding-left:15px;
     padding-right: 15px;
     margin: 0 auto;
-}
+} */
+.container {
+    max-width: 428px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 body{
     font-family: 'roboto' ,sans-serif;
     color: #434455;
