--- a/css/desctop.css
+++ b/css/desctop.css
@@ -2,6 +2,38 @@
     .container{
         max-width: 1158px;
     }
+
+    .work {
+        display: contents;
+        padding-top: 120px;
+        padding-bottom: 120px;
+    }
+    .work-title {
+        font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: #2E2F42;
+    margin-bottom: 72px;
+    
+    
+    }
+    .work-list {
+        display: flex;
+        gap: 24px;
+    }
+    .work-item {
+        box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+        border-radius: 0px 0px 4px 4px;
+        background-color: #FFFFFF;
+        transition-property: border-radius;
+        transition-duration: var(--time-animation);
+        transition-timing-function: var(--hov-foc-cubic);
+    }
     .team-list{
         display: flex;
     flex-wrap: wrap;
