--- a/css/desctop.css
+++ b/css/desctop.css
@@ -25,6 +25,7 @@
     .work-list {
         display: flex;
         gap: 24px;
+        padding-bottom: 120px;
     }
     .work-item {
         box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -33,6 +34,7 @@
         transition-property: border-radius;
         transition-duration: var(--time-animation);
         transition-timing-function: var(--hov-foc-cubic);
+        
     }
     .team-list{
         display: flex;
